--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p>This website was created by L Gopikrishna as part of a NodeJs Course. This website uses data for 'weatherstack.com' and 'positionstack.com'.</p>
             <img class="portrait" src="/img/cat-meow.jpg" alt="cat-meowing">
         </div>
         
